projects/chd/gateway/k8s-config/sit/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gateway
  namespace: chd-sit
  labels:
    app: gateway
  annotations:
    cert-manager.io/cluster-issuer: "lets-encrypt"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/enable-cors: 'true'
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: public
  tls:
    - hosts:
      -  chd-gateway-sit.coherent.in
      secretName: gateway-tls
  rules:
  - host: "chd-gateway-sit.coherent.in"
    http:
      paths:
        - path: /auth-service(/|$)(.*)
          pathType: Prefix
          backend:
            service:
              name: auth-svc
              port:
                number: 8081
        - path: /master-service(/|$)(.*)
          pathType: Prefix
          backend:
            service:
              name: master-svc
              port:
                number: 8082
        - path: /incident-service(/|$)(.*)
          pathType: Prefix
          backend:
            service:
              name: incident-svc
              port:
                number: 8083
